--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "off" // Desativar a regra para todo o projeto
+    "@typescript-eslint/no-unused-vars": "off",// Desativar a regra para todo o projeto
+    "@typescript-eslint/no-explicit-any": "off" // Desativa a regra para todo o projeto
   }
 }
